force-app/main/default/objects/MN_Related_List__c/MN_Related_List__c.object-meta.xml
<CustomObject>
    <label>MN Related List</label>
    <nameField>
        <label>MN Related List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MN Related Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>