force-app/main/default/objects/MN_Related_List__c/fields/Record_Types_To_Be_Excluded__c.field-meta.xml
<CustomField>
    <fullName>Record_Types_To_Be_Excluded__c</fullName>
    <label>Record Types To Be Excluded</label>
    <length>255</length>
    <type>Text</type>
</CustomField>