force-app/main/default/objects/MN_Related_List__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>Record Types To Be Included</label>
    <length>255</length>
    <type>Text</type>
</CustomField>