force-app/main/default/objects/MN_Related_List__c/fields/Rollup_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Rollup_API_Name__c</fullName>
    <label>Rollup API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>