force-app/main/default/objects/MN_Related_List__c/fields/SearchResultsCSV__c.field-meta.xml
<CustomField>
    <fullName>SearchResultsCSV__c</fullName>
    <label>SearchResultsCSV</label>
    <length>50</length>
    <type>Text</type>
</CustomField>